--- a/style.css
+++ b/style.css
@@ -33,6 +33,14 @@ body {
     height: 28px;
 }
 
+#area-sector {
+    top: 190px;
+    left: 52px;
+    width: 195px;
+    height: 195px;
+    border-radius: 98px;
+}
+
 #area-home-btn {
     top: 570px;
     left: 15px;
